--- a/index.html
+++ b/index.html
@@ -113,9 +113,20 @@
       class="benefits-section theme-bg-light-gradient py-5"
     >
       <div class="container py-5">
-        <h2 class="section-heading text-center mb-3">
-          What Will You Get From This Book?
-        </h2>
+        <div
+          style="display: flex; justify-content: center; align-items: center"
+        >
+          <iframe
+            width="786"
+            height="539"
+            src="https://www.youtube.com/embed/lVXDC72wrhQ"
+            title="THE BIGGEST ONLINE BOOTCAMP FOR BUSINESS PEOPLE WHO WANT GROWTH!"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+        </div>
+        <br />
         <div class="section-intro single-col-max mx-auto text-center mb-5">
           I am happy that you are here! Do you know why? Because your business
           is important to YOU AND ME, both of us would work together to make
@@ -577,43 +588,25 @@
         <div class="author-profile text-center mb-5">
           <img
             class="author-pic"
-            src="assets/images/profiles/author-profile.png"
+            src="assets/images/profiles/praise.jpeg"
             alt="image"
+            style="width: 300px; height: 300px; border-radius: 100%"
           />
         </div>
         <!--//author-profile-->
         <h2 class="section-heading text-center text-white mb-3">
-          Wait first, who is this PRAISE AMOS?
+          Wait first, Who is this PRAISE AMOS?
         </h2>
         <div class="author-bio single-col-max mx-auto">
           <p>
-            This book landing page template is made by product designer
-            <a
-              class="theme-link"
-              href="http://themes.3rdwavemedia.com"
-              target="_blank"
-              >Xiaoying Riley</a
-            >
-            for developers. You can use this template to self-publish and
-            promote your book/ebook. You can easily use platforms such as
-            <a class="theme-link" href="https://gumroad.com/" target="_blank"
-              >Gumroad</a
-            >
-            to handle your book payment and delivery.
-          </p>
-          <p>
-            This template is 100% FREE as long as you
-            <strong>keep the footer attribution link</strong>. You do not have
-            the rights to resell, sublicense or redistribute (even for free) the
-            template on its own or as a separate attachment from any of your
-            work. If you’d like to use this template without the footer
-            attribution link, you can buy the
-            <a
-              class="theme-link"
-              href="https://docs.google.com/forms/d/e/1FAIpQLSdz00j-hlJJNQowNn9vR4y-4XQpsAJwX_TLJc4hm8ligOMA8Q/viewform"
-              target="_blank"
-              ><strong>commercial license</strong></a
-            >.
+            Praise Amos is the founder of Onebrand Africa. A business
+            development agency that helps small business Owners build profitable
+            businesses by focusing on core business growth processes. For the
+            past 2 years, She has hosted several virtual and physical business
+            growth workshops for small business owners. Praise is a master of
+            marketing and strategy, she understands the business of people and
+            sales! With praise, there is always a solution for poor sales!
+            Regardless of your business industry or size!
           </p>
 
           <!--//author-links-->
@@ -688,36 +681,18 @@
         <h2 class="section-heading text-center text-white mb-3">
           ANSWERING YOUR QUESTIONS
         </h2>
-        <div class="author-bio single-col-max mx-auto">
-          <p>
-            This book landing page template is made by product designer
-            <a
-              class="theme-link"
-              href="http://themes.3rdwavemedia.com"
-              target="_blank"
-              >Xiaoying Riley</a
-            >
-            for developers. You can use this template to self-publish and
-            promote your book/ebook. You can easily use platforms such as
-            <a class="theme-link" href="https://gumroad.com/" target="_blank"
-              >Gumroad</a
-            >
-            to handle your book payment and delivery.
-          </p>
-          <p>
-            This template is 100% FREE as long as you
-            <strong>keep the footer attribution link</strong>. You do not have
-            the rights to resell, sublicense or redistribute (even for free) the
-            template on its own or as a separate attachment from any of your
-            work. If you’d like to use this template without the footer
-            attribution link, you can buy the
-            <a
-              class="theme-link"
-              href="https://docs.google.com/forms/d/e/1FAIpQLSdz00j-hlJJNQowNn9vR4y-4XQpsAJwX_TLJc4hm8ligOMA8Q/viewform"
-              target="_blank"
-              ><strong>commercial license</strong></a
-            >.
-          </p>
+        <div
+          style="display: flex; justify-content: center; align-items: center"
+        >
+          <iframe
+            width="806"
+            height="484"
+            src="https://www.youtube.com/embed/M-Xc4Km-EkY"
+            title="FAQ| THE SOLD-OUT IN DECEMBER BOOTCAMP"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
 
           <!--//author-links-->
         </div>
