--- a/index.html
+++ b/index.html
@@ -166,78 +166,6 @@
     </section>
     <!--//benefits-section-->
 
-    <section id="content-section" class="content-section">
-      <div class="container">
-        <div class="single-col-max mx-auto">
-          <h2 class="section-heading text-center mb-5">What's Included</h2>
-          <div class="row">
-            <div class="col-12 col-md-6">
-              <div class="figure-holder mb-5">
-                <img
-                  class="img-fluid"
-                  src="assets/images/devbook-devices.png"
-                  alt="image"
-                />
-              </div>
-              <!--//figure-holder-->
-            </div>
-            <!--//col-->
-            <div class="col-12 col-md-6 mb-5">
-              <div class="key-points mb-4 text-center">
-                <ul
-                  class="key-points-list list-unstyled mb-4 mx-auto d-inline-block text-start"
-                >
-                  <li>
-                    <i class="fas fa-check-circle me-2"></i>List your book's
-                    content here.
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle me-2"></i>PDF fermentum
-                    tincidunt erat.
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle me-2"></i>EPUB curabitur
-                    fermentum.
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle me-2"></i>Lorem ipsum dolor
-                    sit amet.
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle me-2"></i>Praesent molestie
-                    odio risus.
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle me-2"></i>Kindle curabitur
-                    fermentum.
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle me-2"></i>Kindle curabitur
-                    fermentum.
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle me-2"></i>Kindle curabitur
-                    fermentum.
-                  </li>
-                </ul>
-                <div class="text-center">
-                  <a
-                    class="btn btn-primary"
-                    href="https://docs.google.com/forms/d/e/1FAIpQLSdz00j-hlJJNQowNn9vR4y-4XQpsAJwX_TLJc4hm8ligOMA8Q/viewform"
-                    >I want this book</a
-                  >
-                </div>
-              </div>
-              <!--//key-points-->
-            </div>
-            <!--//col-12-->
-          </div>
-          <!--//row-->
-        </div>
-        <!--//single-col-max-->
-      </div>
-      <!--//container-->
-    </section>
     <!--//content-section-->
 
     <section id="audience-section" class="audience-section py-5">
@@ -491,7 +419,7 @@
           <a
             class="btn btn-primary"
             href="https://docs.google.com/forms/d/e/1FAIpQLSdz00j-hlJJNQowNn9vR4y-4XQpsAJwX_TLJc4hm8ligOMA8Q/viewform"
-            >Get Your Copy Today</a
+            >Get In Today</a
           >
         </div>
       </div>
@@ -640,7 +568,7 @@
         </div>
         <br />
         <br />
-        <h2 class="section-heading text-center text-white mb-3">
+        <!-- <h2 class="section-heading text-center text-white mb-3">
           TAKE A LOOK INSIDE THE SOLD-OUT BOOT CAMP
         </h2>
         <div class="author-bio single-col-max mx-auto">
@@ -673,9 +601,7 @@
               ><strong>commercial license</strong></a
             >.
           </p>
-
-          <!--//author-links-->
-        </div>
+        </div> -->
         <br />
         <br />
         <h2 class="section-heading text-center text-white mb-3">
