--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
       id="benefits-section"
       class="benefits-section theme-bg-light-gradient py-5"
     >
+      <h2 class="section-heading text-center mb-4">
+        What is the Sold out in December Bootcamp?
+      </h2>
       <div class="container py-5">
         <div
           style="display: flex; justify-content: center; align-items: center"
@@ -165,7 +168,69 @@
       <!--//container-->
     </section>
     <!--//benefits-section-->
+    <section
+      id="author-section"
+      class="author-section section theme-bg-primary py-5"
+    >
+      <div class="container py-3">
+        <div class="author-profile text-center mb-5">
+          <img
+            class="author-pic"
+            src="assets/images/profiles/praise.jpeg"
+            alt="image"
+            style="width: 300px; height: 300px; border-radius: 100%"
+          />
+        </div>
+        <!--//author-profile-->
+        <h2 class="section-heading text-center text-white mb-3">
+          Wait first, Who is this PRAISE AMOS?
+        </h2>
+        <div class="author-bio single-col-max mx-auto">
+          <p>
+            Praise Amos is the founder of Onebrand Africa. A business
+            development agency that helps small business Owners build profitable
+            businesses by focusing on core business growth processes. For the
+            past 2 years, She has hosted several virtual and physical business
+            growth workshops for small business owners. Praise is a master of
+            marketing and strategy, she understands the business of people and
+            sales! With praise, there is always a solution for poor sales!
+            Regardless of your business industry or size!
+          </p>
 
+          <!--//author-links-->
+          <div class="author-links text-center pt-4">
+            <h5 class="text-white mb-4">Follow Author</h5>
+            <ul class="social-list list-unstyled">
+              <li class="list-inline-item">
+                <a href="https://twitter.com/3rdwave_themes"
+                  ><i class="fab fa-twitter"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://github.com/xriley"
+                  ><i class="fab fa-github-alt"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://medium.com/@3rdwave_themes"
+                  ><i class="fab fa-medium-m"></i
+                ></a>
+              </li>
+
+              <li class="list-inline-item">
+                <a href="https://themes.3rdwavemedia.com/"
+                  ><i class="fas fa-globe-europe"></i
+                ></a>
+              </li>
+            </ul>
+            <!--//social-list-->
+          </div>
+        </div>
+        <br />
+        <!--//author-bio-->
+      </div>
+      <!--//container-->
+    </section>
     <!--//content-section-->
 
     <section id="audience-section" class="audience-section py-5">
@@ -262,7 +327,7 @@
 
     <section id="reviews-section" class="reviews-section py-5">
       <div class="container">
-        <h2 class="section-heading text-center">Book Reviews</h2>
+        <h2 class="section-heading text-center">Testimonials</h2>
         <div class="section-intro text-center single-col-max mx-auto mb-5">
           See what our readers are saying.
         </div>
@@ -270,9 +335,12 @@
           <div class="item col-12 col-lg-4 p-3 mb-4">
             <div class="item-inner theme-bg-light rounded p-4">
               <blockquote class="quote">
-                "Excellent Book! Add your book review here consectetur
-                adipiscing elit. Aliquam euismod nunc porta urna facilisis
-                tempor. "
+                Hi, I am Shallom, the founder of Shallom skincare, we and a
+                problem with clearly communicating our brand identity and we
+                reached out to onebrand Africa. We had strategy sessions with
+                the team and we go a new clear identity. We also did sales
+                strategy session. The people at one brand understands customers
+                a cross different industries and they are able connect with you.
               </blockquote>
               <!--//item-->
               <div class="source row gx-md-3 gy-3 gy-md-0">
@@ -285,8 +353,8 @@
                 </div>
                 <!--//col-->
                 <div class="col source-info text-center text-md-start">
-                  <div class="source-name">James Doe</div>
-                  <div class="soure-title">Co-Founder, Startup Week</div>
+                  <div class="source-name">Shallom</div>
+                  <div class="soure-title">Founder | Shallom skincare</div>
                 </div>
                 <!--//col-->
               </div>
@@ -295,125 +363,23 @@
             </div>
             <!--//inner-->
           </div>
-          <!--//item-->
-          <div class="item col-12 col-lg-4 p-3 mb-4">
-            <div class="item-inner theme-bg-light rounded p-4">
-              <blockquote class="quote">
-                "Great Book! Add your book review here consectetur adipiscing
-                elit. Aliquam euismod nunc porta urna facilisis tempor. Praesent
-                mauris neque."
-              </blockquote>
-              <!--//item-->
-              <div class="source row gx-md-3 gy-3 gy-md-0 align-items-center">
-                <div class="col-12 col-md-auto text-center text-md-start">
-                  <img
-                    class="source-profile"
-                    src="assets/images/profiles/profile-2.png"
-                    alt="image"
-                  />
-                </div>
-                <!--//col-->
-                <div class="col source-info text-center text-md-start">
-                  <div class="source-name">Jean Doe</div>
-                  <div class="soure-title">Co-Founder, Company Tristique</div>
-                </div>
-                <!--//col-->
-              </div>
-              <!--//source-->
-
-              <div class="icon-holder"><i class="fas fa-quote-right"></i></div>
-            </div>
-            <!--//inner-->
+          <div
+            style="display: flex; justify-content: center; align-items: center"
+          >
+            <img
+              src="./assets/images/p1.jpeg"
+              alt=""
+              style="width: 150px; height: 150px; margin-right: 20px"
+            />
+            <img
+              src="./assets/images/p2.jpeg"
+              alt=""
+              style="width: 150px; height: 150px"
+            />
           </div>
-          <!--//item-->
-          <div class="item col-12 col-lg-4 p-3 mb-4">
-            <div class="item-inner theme-bg-light rounded p-4">
-              <blockquote class="quote">
-                "Excellent Book! Add your book review here consectetur
-                adipiscing elit. Pellentesque ac leo turpis. Phasellus imperdiet
-                id ligula tempor imperdiet."
-              </blockquote>
-              <!--//item-->
-              <div class="source row gx-md-3 gy-3 gy-md-0 align-items-center">
-                <div class="col-12 col-md-auto text-center text-md-start">
-                  <img
-                    class="source-profile"
-                    src="assets/images/profiles/profile-3.png"
-                    alt="image"
-                  />
-                </div>
-                <!--//col-->
-                <div class="col source-info text-center text-md-start">
-                  <div class="source-name">Tom Doe</div>
-                  <div class="soure-title">Product Designer, Company Lorem</div>
-                </div>
-                <!--//col-->
-              </div>
-              <!--//source-->
-              <div class="icon-holder"><i class="fas fa-quote-right"></i></div>
-            </div>
-            <!--//inner-->
-          </div>
-          <!--//item-->
-          <div class="item col-12 col-lg-4 p-3 mb-4">
-            <div class="item-inner theme-bg-light rounded p-4">
-              <blockquote class="quote">
-                "Another book review here consectetur adipiscing elit.
-                Pellentesque ac leo turpis. Phasellus imperdiet id ligula tempor
-                imperdiet."
-              </blockquote>
-              <!--//item-->
-              <div class="source row gx-md-3 gy-3 gy-md-0 align-items-center">
-                <div class="col-12 col-md-auto text-center text-md-start">
-                  <img
-                    class="source-profile"
-                    src="assets/images/profiles/profile-4.png"
-                    alt="image"
-                  />
-                </div>
-                <!--//col-->
-                <div class="col source-info text-center text-md-start">
-                  <div class="source-name">Alice Doe</div>
-                  <div class="soure-title">App Developer, Company Ipsum</div>
-                </div>
-                <!--//col-->
-              </div>
-              <!--//source-->
-              <div class="icon-holder"><i class="fas fa-quote-right"></i></div>
-            </div>
-            <!--//inner-->
-          </div>
-          <!--//item-->
-          <div class="item col-12 col-lg-4 p-3 mb-4">
-            <div class="item-inner theme-bg-light rounded p-4">
-              <blockquote class="quote">
-                "Another book review here consectetur adipiscing elit.
-                Pellentesque ac leo turpis. Phasellus imperdiet id ligula tempor
-                imperdiet."
-              </blockquote>
-              <!--//item-->
-              <div class="source row gx-md-3 gy-3 gy-md-0 align-items-center">
-                <div class="col-12 col-md-auto text-center text-md-start">
-                  <img
-                    class="source-profile"
-                    src="assets/images/profiles/profile-5.png"
-                    alt="image"
-                  />
-                </div>
-                <!--//col-->
-                <div class="col source-info text-center text-md-start">
-                  <div class="source-name">Sam Doe</div>
-                  <div class="soure-title">Co-Founder, Company Integer</div>
-                </div>
-                <!--//col-->
-              </div>
-              <!--//source-->
-              <div class="icon-holder"><i class="fas fa-quote-right"></i></div>
-            </div>
-            <!--//inner-->
-          </div>
-          <!--//item-->
         </div>
+        <br />
+        <br />
         <!--//row-->
         <div class="text-center">
           <a
@@ -514,115 +480,27 @@
     >
       <div class="container py-3">
         <div class="author-profile text-center mb-5">
-          <img
-            class="author-pic"
-            src="assets/images/profiles/praise.jpeg"
-            alt="image"
-            style="width: 300px; height: 300px; border-radius: 100%"
-          />
-        </div>
-        <!--//author-profile-->
-        <h2 class="section-heading text-center text-white mb-3">
-          Wait first, Who is this PRAISE AMOS?
-        </h2>
-        <div class="author-bio single-col-max mx-auto">
-          <p>
-            Praise Amos is the founder of Onebrand Africa. A business
-            development agency that helps small business Owners build profitable
-            businesses by focusing on core business growth processes. For the
-            past 2 years, She has hosted several virtual and physical business
-            growth workshops for small business owners. Praise is a master of
-            marketing and strategy, she understands the business of people and
-            sales! With praise, there is always a solution for poor sales!
-            Regardless of your business industry or size!
-          </p>
+          <br />
+          <h2 class="section-heading text-center text-white mb-3">
+            ANSWERING YOUR QUESTIONS
+          </h2>
+          <div
+            style="display: flex; justify-content: center; align-items: center"
+          >
+            <iframe
+              width="806"
+              height="484"
+              src="https://www.youtube.com/embed/M-Xc4Km-EkY"
+              title="FAQ| THE SOLD-OUT IN DECEMBER BOOTCAMP"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
 
-          <!--//author-links-->
-          <div class="author-links text-center pt-4">
-            <h5 class="text-white mb-4">Follow Author</h5>
-            <ul class="social-list list-unstyled">
-              <li class="list-inline-item">
-                <a href="https://twitter.com/3rdwave_themes"
-                  ><i class="fab fa-twitter"></i
-                ></a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://github.com/xriley"
-                  ><i class="fab fa-github-alt"></i
-                ></a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://medium.com/@3rdwave_themes"
-                  ><i class="fab fa-medium-m"></i
-                ></a>
-              </li>
-
-              <li class="list-inline-item">
-                <a href="https://themes.3rdwavemedia.com/"
-                  ><i class="fas fa-globe-europe"></i
-                ></a>
-              </li>
-            </ul>
-            <!--//social-list-->
+            <!--//author-links-->
           </div>
+          <!--//author-bio-->
         </div>
-        <br />
-        <br />
-        <!-- <h2 class="section-heading text-center text-white mb-3">
-          TAKE A LOOK INSIDE THE SOLD-OUT BOOT CAMP
-        </h2>
-        <div class="author-bio single-col-max mx-auto">
-          <p>
-            This book landing page template is made by product designer
-            <a
-              class="theme-link"
-              href="http://themes.3rdwavemedia.com"
-              target="_blank"
-              >Xiaoying Riley</a
-            >
-            for developers. You can use this template to self-publish and
-            promote your book/ebook. You can easily use platforms such as
-            <a class="theme-link" href="https://gumroad.com/" target="_blank"
-              >Gumroad</a
-            >
-            to handle your book payment and delivery.
-          </p>
-          <p>
-            This template is 100% FREE as long as you
-            <strong>keep the footer attribution link</strong>. You do not have
-            the rights to resell, sublicense or redistribute (even for free) the
-            template on its own or as a separate attachment from any of your
-            work. If you’d like to use this template without the footer
-            attribution link, you can buy the
-            <a
-              class="theme-link"
-              href="https://docs.google.com/forms/d/e/1FAIpQLSdz00j-hlJJNQowNn9vR4y-4XQpsAJwX_TLJc4hm8ligOMA8Q/viewform"
-              target="_blank"
-              ><strong>commercial license</strong></a
-            >.
-          </p>
-        </div> -->
-        <br />
-        <br />
-        <h2 class="section-heading text-center text-white mb-3">
-          ANSWERING YOUR QUESTIONS
-        </h2>
-        <div
-          style="display: flex; justify-content: center; align-items: center"
-        >
-          <iframe
-            width="806"
-            height="484"
-            src="https://www.youtube.com/embed/M-Xc4Km-EkY"
-            title="FAQ| THE SOLD-OUT IN DECEMBER BOOTCAMP"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-          ></iframe>
-
-          <!--//author-links-->
-        </div>
-        <!--//author-bio-->
       </div>
       <!--//container-->
     </section>
