--- a/index.html
+++ b/index.html
@@ -335,20 +335,23 @@
           <div class="item col-12 col-lg-4 p-3 mb-4">
             <div class="item-inner theme-bg-light rounded p-4">
               <blockquote class="quote">
-                Hi, I am Shallom, the founder of Shallom skincare, we and a
-                problem with clearly communicating our brand identity and we
-                reached out to onebrand Africa. We had strategy sessions with
-                the team and we go a new clear identity. We also did sales
-                strategy session. The people at one brand understands customers
-                a cross different industries and they are able connect with you.
+                Hi, i am Shallom. The founder of Shallom skin care. We reached
+                out to Onebrand.africa to help us create brand identity that
+                clearly communicates our brand value. We got the best brand
+                identity and that improved our brand communication and trust. We
+                also had sales strategy sessions and that helped our sales! The
+                team at Onebrand understand customers and help you make your
+                product into something of value to your customers. I strongly
+                recommend Onebrand.adrica!
               </blockquote>
               <!--//item-->
               <div class="source row gx-md-3 gy-3 gy-md-0">
                 <div class="col-12 col-md-auto text-center text-md-start">
                   <img
                     class="source-profile"
-                    src="assets/images/profiles/profile-1.png"
+                    src="assets/images/sha.jpeg"
                     alt="image"
+                    style="width: 50px; height: 50px; border-radius: 100%"
                   />
                 </div>
                 <!--//col-->
@@ -366,16 +369,22 @@
           <div
             style="display: flex; justify-content: center; align-items: center"
           >
-            <img
-              src="./assets/images/p1.jpeg"
-              alt=""
-              style="width: 150px; height: 150px; margin-right: 20px"
-            />
-            <img
-              src="./assets/images/p2.jpeg"
-              alt=""
-              style="width: 150px; height: 150px"
-            />
+            <div>
+              <img
+                src="./assets/images/p1.jpeg"
+                alt=""
+                style="width: 150px; height: 150px; margin-right: 50px"
+              />
+              <p>Before OneBrand Africa</p>
+            </div>
+            <div>
+              <img
+                src="./assets/images/p2.jpeg"
+                alt=""
+                style="width: 150px; height: 150px"
+              />
+              <p>After Onebrand Africa</p>
+            </div>
           </div>
         </div>
         <br />
