--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
                 <!-- A free Bootstrap 5 template for developers and programmers who
                 want to self-publish books. Download now and start selling your
                 book right away! -->
-                Join business owners like you
+                Join business owners like you for 90 days and focus on building
+                a customers who trust your brand enough to buy from you and
+                refer their friends!
               </div>
               <!--//subheading-->
 
