--- a/index.html
+++ b/index.html
@@ -218,7 +218,23 @@
             sales! With praise, there is always a solution for poor sales!
             Regardless of your business industry or size!
           </p>
-
+          <div
+            style="
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              flex-direction: column;
+            "
+          >
+            <img
+              src="./assets/images/praise 1.jpeg"
+              alt=""
+              style="width: 500px; height: 300px"
+            />
+            <br />
+            <h5 class="text-white mb-4">Business Growth Training</h5>
+          </div>
+          <br />
           <!--//author-links-->
           <div class="author-links text-center pt-4">
             <h5 class="text-white mb-4">Follow Author</h5>
@@ -254,7 +270,7 @@
       <!--//container-->
     </section>
     <!--//content-section-->
-
+    <div></div>
     <section id="audience-section" class="audience-section py-5">
       <div class="container">
         <h2 class="section-heading text-center mb-4">
