--- a/index.html
+++ b/index.html
@@ -366,9 +366,9 @@
     <section id="reviews-section" class="reviews-section py-5">
       <div class="container">
         <h2 class="section-heading text-center">Testimonials</h2>
-        <div class="section-intro text-center single-col-max mx-auto mb-5">
+        <!-- <div class="section-intro text-center single-col-max mx-auto mb-5">
           See what our readers are saying.
-        </div>
+        </div> -->
         <div class="row justify-content-center">
           <div class="item col-12 col-lg-4 p-3 mb-4">
             <div class="item-inner theme-bg-light rounded p-4">
