--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                 also had sales strategy sessions and that helped our sales! The
                 team at Onebrand understand customers and help you make your
                 product into something of value to your customers. I strongly
-                recommend Onebrand.adrica!
+                recommend Onebrand.africa!
               </blockquote>
               <!--//item-->
               <div class="source row gx-md-3 gy-3 gy-md-0">
