--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Miss Praise Book Launch</title>
+    <title>Sold out in December bootcamp</title>
 
     <!-- Meta -->
     <meta charset="utf-8" />
