--- a/index.html
+++ b/index.html
@@ -548,6 +548,29 @@
           <!--//author-bio-->
         </div>
       </div>
+      <div
+          class="cta-holder row gx-md-3 gy-3 gy-md-0 flex justify-content-center align-items-center"
+        >
+          <div
+            class="col-12 col-md-auto flex justify-content-center align-items-center"
+          >
+            <a
+              class="btn btn-primary w-100"
+              href="https://wa.me/message/IOJPNWV6PMJ4B1"
+              >
+            Done registering? 
+Click here to connect on Whatsapp</a
+            >
+          </div>
+          <!-- <div class="col-12 col-md-auto">
+                  <a
+                    class="btn btn-secondary scrollto w-100"
+                    href="#benefits-section"
+                    >Learn More</a
+                  >
+                </div> -->
+        </div>
+      </div>
       <!--//container-->
     </section>
     <!--//author-section-->
